# 2026.1.30-MCM-Resources-Index

./: .gitignore  LICENSE  README.md  pyproject.toml
2024C/src/: parse_ds.py
docs/: classification.md  regression.md
examples/2020C/: feature_engineering.py
examples/al_impl/: ga.py  np.py
examples/pd_examples/: 20年c题数据清洗.ipynb  文本内容筛查.py
examples/pyplot_examples/: heatmap.py  iris_visualization.py  linear_regression_visualization.py  titanic_model.py
examples/sk_examples/: prophet时序预测模型.ipynb  rf.py  灰色模型家族.ipynb
pd_examples/: load_dataset.py
sk_examples/: myrf.py  rf.py
src/: feature.py  mcmc_train.py  preprocess.py  q1_q2_interface.py  q1_result.py  q2_abnormal_bottom_survivors.py  q2_abnormal_wilcoxon.py  q2_controversial_bottom_analysis_clean.py  q2_draw.py  q2_format_transform.py  q2_spearman.py  q2_spearman_fan_favor.py  q2_wilcoxon.py  q4_feature_engineering.py  q4_importance_draw.py  q4_rftrain.py  q4_static_correlation_heatmap.py  q5_accuracy_check.py  q5_analysis.py  q5_detailed_error_analysis.py  q5_error_summary.py  q5_format_tables.py  q5_pos_draw.py  q5_run_all.py  q5_stick_draw.py  q5_votes.py  verify.py  visualization.py  wilcoxon.py  贝叶斯分层+mcmc.py
src/configs/: config.py
src/data/: gender.csv  modeling_results_detailed.csv  modeling_results_detailed_pc.csv  modeling_results_detailed_rank.csv  viewers.xlsx  性别.xlsx
src/docs/: MCMC_PARAMETER_TUNING.md
src/output/: processed_data.csv  processed_data_percentage.csv  processed_data_rank.csv  processed_modeling_rank.csv  processed_viewer.csv  q4_featured_data.csv  votes_calculated.csv
(+174 files in other folders)
